Add new mwthods